# rpi_autopilot

./: CMakeLists.txt  Makefile  README  autopilot.c  calibration.c  calibration.h  matrix.c  quaternion.c  quaternion.h  rotate.c  rotate.h  runnc.sh  upload.sh
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  autopilot.c  imutest.c
examples/py/: CMakeLists.txt  simple_autopilot.py
examples/scheme/: autopilot.scm
glscope/: CMakeLists.txt  glscope.c
imu/: CMakeLists.txt  calibration.c  calibration.h  config.c  config.h  imu.c  imu.h  quaternion.c  quaternion.h  rotate.c  rotate.h
imu/MadgwickAHRS/: MadgwickAHRS.c
imu/MahonyAHRS/: MahonyAHRS.c
kicad_schematic/: PIN_ARRAY_2X1_big.mod  rpi_autopilot-cache.bak  rpi_autopilot-cache.lib  rpi_autopilot.000  rpi_autopilot.bak  rpi_autopilot.brd  rpi_autopilot.cmp  rpi_autopilot.net  rpi_autopilot.pro  rpi_autopilot.sch  rpi_conn.bak  rpi_conn.bck  rpi_conn.dcm  rpi_conn.lib
misc/: CMakeLists.txt  config.c  config.h  print_value.c  print_value.h
servo/: CMakeLists.txt  README  servo.c  servo.h
servo/arduino/: Makefile  ServoControl.ino
servo/arduino/ServoControl/: ServoControl.ino
servo/attiny243/: servocontrol.c
servo/servos/arduino/: ServoControl.ino
